[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/exclaim.png" type="Texture" id=1]
[ext_resource path="res://elements/SecretButton.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "appear"
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.295538, 0.796527, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.167246, 0.603444, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}

[sub_resource type="Animation" id=2]
resource_name = "bloop"
length = 0.15
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.999918, -0.25, 0, 0.150423, -0.187104, 0.999918, -0.000289232, 0.0993351, 0.113648, -0.0401422 ),
"times": PoolRealArray( 0, 0.15 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.173467, -0.126633, 1, -0.0175719, 0.0584302, 0.25, 0 ),
"times": PoolRealArray( 0, 0.15 )
}

[sub_resource type="Animation" id=3]
resource_name = "disappear"
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.295538, 0.796527, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.167246, 0.603444, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}

[sub_resource type="Animation" id=4]
resource_name = "wobble"
length = 2.5
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1.05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1.05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 )
}

[node name="secret" type="TextureButton"]
modulate = Color( 0.784314, 0.913725, 0.615686, 1 )
margin_left = 304.0
margin_top = 96.0
margin_right = 364.0
margin_bottom = 156.0
rect_min_size = Vector2( 60, 60 )
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/appear = SubResource( 1 )
anims/bloop = SubResource( 2 )
anims/disappear = SubResource( 3 )
anims/wobble = SubResource( 4 )

[connection signal="pressed" from="." to="." method="_on_advance_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
